// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticateOps Classic Tests getTokens() 0: Authenticate successfully as user 1`] = `
{
  "bearerToken": undefined,
  "host": "http://openam-frodo-dev.classic.com:8080/am",
  "realm": "/",
  "subject": Any<String>,
  "userSessionToken": {
    "expires": 1753917052000,
    "from_cache": false,
    "realm": "/",
    "successUrl": "/am/console",
    "tokenId": "MDXFdRfEPBkEwO6RW-tB5dcTibI.*AAJTSQACMDEAAlNLABxGMUp0SjdQb2pRWkZ2NmV3MEYzVjhBL2lIRTA9AAR0eXBlAANDVFMAAlMxAAA.*",
  },
}
`;

exports[`AuthenticateOps Classic Tests getTokens() 0: Authenticate successfully as user 2`] = `"iPlanetDirectoryPro"`;

exports[`AuthenticateOps Classic Tests getTokens() 0: Authenticate successfully as user 3`] = `"MDXFdRfEPBkEwO6RW-tB5dcTibI.*AAJTSQACMDEAAlNLABxGMUp0SjdQb2pRWkZ2NmV3MEYzVjhBL2lIRTA9AAR0eXBlAANDVFMAAlMxAAA.*"`;

exports[`AuthenticateOps Classic Tests getTokens() 1: Authenticate successfully using Amster credentials 1`] = `
{
  "bearerToken": undefined,
  "host": "http://openam-frodo-dev.classic.com:8080/am",
  "realm": "/",
  "subject": Any<String>,
  "userSessionToken": {
    "expires": 1753917052000,
    "from_cache": false,
    "realm": "/",
    "successUrl": "/am/console",
    "tokenId": "bMwAY_diMu3bLYrc9BCDJ7nyBgM.*AAJTSQACMDEAAlNLABwwOUd4RlMrbE9CM3dOd0Ixc3pRSytFMldhMDQ9AAR0eXBlAANDVFMAAlMxAAA.*",
  },
}
`;

exports[`AuthenticateOps Classic Tests getTokens() 1: Authenticate successfully using Amster credentials 2`] = `"iPlanetDirectoryPro"`;

exports[`AuthenticateOps Classic Tests getTokens() 1: Authenticate successfully using Amster credentials 3`] = `"bMwAY_diMu3bLYrc9BCDJ7nyBgM.*AAJTSQACMDEAAlNLABwwOUd4RlMrbE9CM3dOd0Ixc3pRSytFMldhMDQ9AAR0eXBlAANDVFMAAlMxAAA.*"`;

exports[`AuthenticateOps Classic Tests getTokens() 2: Authenticate successfully using alternative Amster subject and service 1`] = `
{
  "bearerToken": undefined,
  "host": "http://openam-frodo-dev.classic.com:8080/am",
  "realm": "/",
  "subject": Any<String>,
  "userSessionToken": {
    "expires": 1753917052000,
    "from_cache": false,
    "realm": "/",
    "successUrl": "/am/console",
    "tokenId": "j7qvGfo7y_HDPTbE6cjdA3E6K_I.*AAJTSQACMDEAAlNLABxxZU1QOTVJN1hPRExZWkJ4Mm1XcmtkZkRKOUk9AAR0eXBlAANDVFMAAlMxAAA.*",
  },
}
`;

exports[`AuthenticateOps Classic Tests getTokens() 2: Authenticate successfully using alternative Amster subject and service 2`] = `"iPlanetDirectoryPro"`;

exports[`AuthenticateOps Classic Tests getTokens() 2: Authenticate successfully using alternative Amster subject and service 3`] = `"j7qvGfo7y_HDPTbE6cjdA3E6K_I.*AAJTSQACMDEAAlNLABxxZU1QOTVJN1hPRExZWkJ4Mm1XcmtkZkRKOUk9AAR0eXBlAANDVFMAAlMxAAA.*"`;
